Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8026963/TypeAnnotationsCrashWithErroneousTreeTest.out
TypeAnnotationsCrashWithErroneousTreeTest.java:9:20: compiler.err.illegal.start.of.type
1 error
